feat: community-related endpoints (post and comment)